<resources>
    <string name="app_name">MyCredentialsApplication</string>
    <string name="action_settings">Settings</string>
    <string name="action_profile">Profile</string>
    <string name="api_url">http://34.253.6.76:8080</string>
    <string name="not_avail">Information currently unavailable</string>
    <string name="device_number">1</string>
    <string name="default_password">abcdefghijklmnopqrstuvwxyz</string>
    <string name="search_hint">Search for credentials</string>

    <string name="serviceName_default">Service Name: no data</string>
    <string name="serviceUrl_default">Service Url: no data</string>
    <string name="username_default">Username: no data</string>
    <string name="email_default">Email address: no data</string>
    <string name="password_default">Password: no data</string>
    <string name="note_default">Notes: no data</string>

    <string name="hint_serviceName">Service name</string>
    <string name="hint_serviceUrl">Service URL</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email address</string>
    <string name="hint_password">Password</string>
    <string name="hint_identifiers">Identifiers</string>
    <string name="hint_note">Notes</string>

    <string name="search_text">Search</string>
    <string name="encrypt_button"> </string>
    <string name="hidden_password_text">****************</string>
</resources>
